mutants.out.old/log/src__tls.rs_line_156_col_9.log

*** src/tls.rs:156:9: replace <impl AsyncWrite for TlsStream<S>>::poll_write -> std::task::Poll<Result<usize, io::Error>> with Poll::from(Ok(1))

*** mutation diff:
--- src/tls.rs
+++ replace <impl AsyncWrite for TlsStream<S>>::poll_write -> std::task::Poll<Result<usize, io::Error>> with Poll::from(Ok(1))
@@ -148,17 +148,17 @@
 }
 
 impl<S: AsyncRead + AsyncWrite + Unpin> AsyncWrite for TlsStream<S> {
     fn poll_write(
         self: std::pin::Pin<&mut Self>,
         cx: &mut std::task::Context<'_>,
         buf: &[u8],
     ) -> std::task::Poll<Result<usize, io::Error>> {
-        self.project().stream.poll_write(cx, buf)
+        Poll::from(Ok(1)) /* ~ changed by cargo-mutants ~ */
     }
 
     fn poll_flush(
         self: std::pin::Pin<&mut Self>,
         cx: &mut std::task::Context<'_>,
     ) -> std::task::Poll<Result<(), io::Error>> {
         self.project().stream.poll_flush(cx)
     }


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0433]: failed to resolve: use of undeclared type `Poll`
   --> src/tls.rs:156:9
    |
156 |         Poll::from(Ok(1)) /* ~ changed by cargo-mutants ~ */
    |         ^^^^ use of undeclared type `Poll`
    |
help: consider importing one of these items
    |
4   + use core::task::Poll;
    |
4   + use std::task::Poll;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
